--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -2,7 +2,8 @@
   <%= avatar shout.user %>
   <%= link_to shout.username, shout.user %>
   <%= render shout.content %>
-  <%= link_to  shout do %>
-  <%= time_ago_in_words(shout.created_at) %> ago.
+  <%= link_to shout do %>
+  <%= time_ago_in_words shout.created_at %> ago.
   <% end %>
+  <%= like_button shout %>
 </div>
