--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <%= avatar @user %>
 <h1><%= @user.username %></h1>
+<%= link_to user_followers_path(@user) do %>
+<%= @user.followers_count %>
+<%= "follower".pluralize @user.followers_count %>
+<% end %>
 <%= follow_button @user %>
 <%= render @user.shouts %>
