Extract Timeline and Dashboard classes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,4 @@
 <%= "follower".pluralize @user.followers_count %>
 <% end %>
 <%= follow_button @user %>
-<%= render @user.shouts %>
+<%= render @timeline %>
