--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,8 +1,7 @@
-<h1>Dashboards#show</h1>
 <%= shout_form_for(TextShout) do |form| %>
 <%= form.text_field :body, placeholder: "Shout here", required: true %>
 <% end %>
 <%= shout_form_for(PhotoShout) do |form| %>
 <%= form.file_field :image, required: true %>
 <% end %>
-<%= render @shouts %>
+<%= render @dashboard.timeline %>
