Add the shout likes count

--- a/app/views/admin/shouts/_shout.html.erb
+++ b/app/views/admin/shouts/_shout.html.erb
@@ -1,7 +1,10 @@
 <div>
-  <%= link_to shout.username, shout.user %>
+  <%= link_to shout.username, admin_user_path(shout.user) %>
   <%= render shout.content %>
   <%= link_to admin_shout_path(shout) do %>
   <%= time_ago_in_words shout.created_at %> ago.
   <% end %>
+  </br>
+  <%= "#{shout.likes_count} " + "Like".pluralize(shout.likes_count) %>
+
 </div>
