--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <%= avatar @user %>
 <h1><%= @user.username %></h1>
+<%= link_to user_followed_users_path(@user) do %>
+<%= "#{@user.followed_users_count} following" %></br>
+<% end %>
 <%= link_to user_followers_path(@user) do %>
 <%= @user.followers_count %>
 <%= "follower".pluralize @user.followers_count %>
