--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,21 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :username
-    %br/
-    = f.text_field :username, autofocus: true, reqiured: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.h-100.col-xl-4.col-lg-8.col-md-10.col-sm-12.align-items-center.container.mx-auto
+  = render "flash"
+  .mx-auto.mt-5.p-5.border.rounded
+    %h2 Sign up
+    = form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: "py-4" } do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .form-group
+        = f.label :username
+        = f.text_field :username, autofocus: true, reqiured: true, class: "form-control"
+      .form-group
+        = f.label :email
+        = f.email_field :email, autocomplete: "email", class: "form-control"
+      .form-group
+        = f.label :password
+        - if @minimum_password_length
+          %em
+            (#{@minimum_password_length} characters minimum)
+        = f.password_field :password, class: "form-control"
+      .col.text-center.mt-3
+        = f.submit "Sign up", class: "btn btn-primary btn-lg mx-auto"
+    = render "devise/shared/links"
