--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,12 @@
-%h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+.h-100.col-xl-4.col-lg-8.col-md-10.col-sm-12.align-items-center.container.mx-auto
+  = render "flash"
+  .mx-auto.mt-5.p-5.border.rounded
+    %h2 Forgot password?
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "py-4" }) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .form-group
+        = f.label :email
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control"
+      .col.text-center.mt-3.px-0
+        = f.submit "Reset password", class: "btn btn-block btn-primary mx-auto"
+    = render "devise/shared/links"
