--- a/app/views/likes/index.html.haml
+++ b/app/views/likes/index.html.haml
@@ -1,2 +1,21 @@
-= render @shout
-= render @shout.users_liked
+.container.my-3
+  .col-md-8.mx-auto
+    %h1.my-3
+      = link_to "#{@shout.username}'s shout likes", @shout
+    .row
+      .col-md-1.pl-1
+        = avatar @shout.user, size: 50, rounded: true
+      .col-md-11.pr-1
+        .row
+          = link_to "@#{@shout.username}", @shout.user, class: "mr-1 text-dark"
+          = link_to @shout, class: "text-muted" do
+            = time_ago_in_words @shout.created_at
+            ago.
+        .row.my-3
+          = render @shout.content
+        .row.d-flex.align-items-center
+          = link_to shout_likes_path(@shout), class: "ml-auto pr-2 text-black-50" do
+            = "#{@shout.likes_count} " + "Like".pluralize(@shout.likes_count)
+          = like_button @shout
+    = render @users_liked
+    = will_paginate @users_liked
