--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,3 +1,14 @@
-%div
-  = avatar user
-  = link_to  user.username, user
+%hr
+.row-md-4.d-flex.align-items-center.justify-content-between
+  .col-7.d-flex.flex-wrap.align-items-center.p-0
+    .pr-2
+      = link_to user do
+        = avatar user, size: 50, rounded: true
+    = link_to user, class: "text-muted" do
+      %h4= user.username.truncate(15)
+  .col-5.d-flex.justify-content-around.p-0
+    = link_to user_followed_users_path(user), class: "text-muted" do
+      = "#{num_to_follows user.followed_users_count} following"
+    = link_to user_followers_path(user), class: "text-muted" do
+      = num_to_follows user.followers_count
+      = "follower".pluralize user.followers_count
