--- a/app/views/shouts/show.html.haml
+++ b/app/views/shouts/show.html.haml
@@ -2,7 +2,8 @@
   .col-md-8.mx-auto
     .row
       .col-md-1.pl-1
-        = avatar @shout.user, size: 50, rounded: true
+        = link_to @shout.user do
+          = avatar @shout.user, size: 50, rounded: true
       .col-md-11.pr-1
         .row
           = link_to "@#{@shout.username}", @shout.user, class: "mr-1 text-dark"
