Add shout counter cache to users and fix dependencies conflict

--- a/app/views/application/_user_info.html.haml
+++ b/app/views/application/_user_info.html.haml
@@ -3,5 +3,5 @@
   %h1
     = current_user.username
 .d-flex.justify-content-between.my-3
-  = pluralize(current_user.shouts.count, "shouts")
+  = pluralize(current_user.shouts_count, "shout")
   = link_to "view my profile", current_user
