Bug fix and some UI changes

--- a/app/views/followed_users/index.html.haml
+++ b/app/views/followed_users/index.html.haml
@@ -1,7 +1,6 @@
 .container.my-3
   .col-md-6.mx-auto
     %h1
-      = @user.username
-      's following
+      = "#{@user.username}'s following"
     = render @followed_users
     = will_paginate @followed_users
