--- a/app/views/application/_search.html.haml
+++ b/app/views/application/_search.html.haml
@@ -1,3 +1,3 @@
-= form_for :search, url: search_path, method: :get, html: { class: "form-inline my-2 my-lg-0" } do |form|
+= form_for :search, url: search_path, method: :get, html: { class: "d-flex flex-nowrap form-inline my-2 my-lg-0" } do |form|
   = form.text_field :term, placeholder: "Search", :required => true, class: "form-control mr-sm-2", type: "search", "aria-label": "Search"
   = form.submit "Search", class: "btn btn-outline-success my-2 my-sm-0", type: "submit"
