--- a/app/views/application/_user_info.html.haml
+++ b/app/views/application/_user_info.html.haml
@@ -1,7 +1,6 @@
 .d-flex.flex-wrap
   = link_to avatar(current_user, size: 80), current_user, class: "pr-2"
-  %h1
-    = current_user.username
+  %h1= current_user.username
 .d-flex.justify-content-between.my-3
   = pluralize(current_user.shouts_count, "shout")
   = link_to "view my profile", current_user
