--- a/app/views/likes/index.html.haml
+++ b/app/views/likes/index.html.haml
@@ -1,11 +1,9 @@
 .container.my-3
   .col-md-8.mx-auto
-    %h1.my-3
-      = link_to "#{@shout.username}'s shout likes", @shout
+    %h1.my-3= "#{@shout.username}'s shout likes"
     .row
       .col-md-1.pl-1
-        = link_to @shout.user do
-          = avatar @shout.user, size: 50, rounded: true
+        = link_to avatar(@shout.user, size: 50, rounded: true), @shout.user
       .col-md-11.pr-1
         .row
           = link_to "@#{@shout.username}", @shout.user, class: "mr-1 text-dark"
