--- a/app/views/homes/show.html.haml
+++ b/app/views/homes/show.html.haml
@@ -2,5 +2,5 @@
 .container.my-1.p-5.bg-light.rounded.d-flex.flex-nowrap.flex-column.align-items-center
   %h1.display-2 Welcome to Shoutr 
   %h4 Shoutr is a brand-new social network
-  = button_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg px-5 my-3", method: :get
+  = link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg px-5 my-3"
   
